# red-green-light

./: .gitignore  LICENSE  README.md  index.html  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
hooks/: claude-hooks.json  install.sh  uninstall.sh
scripts/: generate-icons.mjs  snap.mjs  verify-e2e.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  server.rs  state.rs  tray.rs
src/components/: TrafficLight.css  TrafficLight.tsx
src/lib/: config.ts
